--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,13 @@ uuid = "ee419aa8-929d-45cd-acf6-76bd043cd7ba"
 authors = ["Guillaume Dalle <22795598+gdalle@users.noreply.github.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
+FlameGraphs = "08572546-2f56-4bcf-ba4e-bab62c3a3f89"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
+ProfileSVG = "132c30aa-f267-4189-9183-c8a63c7e05e6"
+
 [compat]
 julia = "1.6"
 
