--- a/Project.toml
+++ b/Project.toml
@@ -11,11 +11,11 @@ Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
 ProfileSVG = "132c30aa-f267-4189-9183-c8a63c7e05e6"
 
 [compat]
-julia = "1.6"
 AbstractTrees = "v0.3"
 FlameGraphs = "v0.2"
-Pluto = "v0.15"
+Pluto = "v0.15, 0.16"
 ProfileSVG = "v0.2"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
