--- a/Project.toml
+++ b/Project.toml
@@ -8,14 +8,14 @@ AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 FlameGraphs = "08572546-2f56-4bcf-ba4e-bab62c3a3f89"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
-ProfileSVG = "132c30aa-f267-4189-9183-c8a63c7e05e6"
+ProfileCanvas = "efd6af41-a80b-495e-886c-e51b0c7d77a3"
 
 [compat]
-julia = "1.6"
 AbstractTrees = "v0.3"
 FlameGraphs = "v0.2"
-Pluto = "v0.18"
-ProfileSVG = "v0.2"
+Pluto = "0.18"
+ProfileCanvas = "0.1"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
